[gd_scene load_steps=12 format=3 uid="uid://b1yhwik1r6m2a"]

[ext_resource type="PackedScene" uid="uid://btkd5w5tomd3q" path="res://Characters/character_body_2d.tscn" id="1_m5c1q"]
[ext_resource type="Script" path="res://Level/game_level.gd" id="1_rfna0"]
[ext_resource type="PackedScene" uid="uid://bx02vvxyp34ml" path="res://Level/farm_collision.tscn" id="3_0mng0"]
[ext_resource type="PackedScene" uid="uid://deivo21ags3re" path="res://Level/farm.tscn" id="3_pwqd3"]
[ext_resource type="PackedScene" uid="uid://c81fsp1x4a6ae" path="res://Weapons/light_saber.tscn" id="5_55v5a"]
[ext_resource type="PackedScene" uid="uid://1p81a6agcsxh" path="res://Weapons/laser_gun.tscn" id="6_n87qv"]
[ext_resource type="PackedScene" uid="uid://cj5wnucfdi7ph" path="res://Weapons/rifle.tscn" id="7_65obb"]
[ext_resource type="PackedScene" uid="uid://sn4p7jd61luf" path="res://Weapons/psitol.tscn" id="8_wonmh"]
[ext_resource type="PackedScene" uid="uid://r40jijbrt0s6" path="res://Weapons/shotgun.tscn" id="9_6b73h"]
[ext_resource type="PackedScene" uid="uid://dnu7rm7au1n7u" path="res://Weapons/rocket_launcher.tscn" id="10_tvs0n"]

[sub_resource type="Curve2D" id="Curve2D_sfksj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1316, 1147, 0, 0, 0, 0, -1239, 1122, 0, 0, 0, 0, -1232.7, -905.252, 0, 0, 0, 0, 1319, -952, 0, 0, 0, 0, 1310.98, 1147)
}
point_count = 5

[node name="gameLevel" type="Node2D"]
position = Vector2(-3, 0)
script = ExtResource("1_rfna0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -1065.0
offset_top = -750.0
offset_right = 1069.0
offset_bottom = 787.0
color = Color(0.65098, 1, 0.545098, 1)

[node name="StaticBody2D" parent="." instance=ExtResource("3_0mng0")]
position = Vector2(3, -45)

[node name="farm" parent="." instance=ExtResource("3_pwqd3")]
position = Vector2(2, -49)

[node name="playerFox" parent="." instance=ExtResource("1_m5c1q")]
position = Vector2(3, 17)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-30.4645, -54.343)
scale = Vector2(0.861611, 0.772749)
curve = SubResource("Curve2D_sfksj")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(1316, 1147)
rotation = -3.13181

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer_big" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Timer_gunman" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Timer_game time" type="Timer" parent="."]

[node name="gameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="gameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.541176)

[node name="Label" type="Label" parent="gameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = -21.5
offset_right = 83.5
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Game Over"

[node name="youAreDead" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="youAreDead"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 0.541176)

[node name="Label" type="Label" parent="youAreDead/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -21.0
offset_right = 100.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "You are Dead."

[node name="lightSaber" parent="." instance=ExtResource("5_55v5a")]
position = Vector2(-136, 133)

[node name="laser gun" parent="." instance=ExtResource("6_n87qv")]
position = Vector2(109, 133)

[node name="rifle" parent="." instance=ExtResource("7_65obb")]
position = Vector2(-9, 141)

[node name="psitol" parent="." instance=ExtResource("8_wonmh")]
position = Vector2(-8, 80)

[node name="shotgun" parent="." instance=ExtResource("9_6b73h")]
position = Vector2(-75, 137)

[node name="rocketLauncher" parent="." instance=ExtResource("10_tvs0n")]
position = Vector2(65, 137)

[connection signal="health_depleted" from="StaticBody2D" to="." method="_on_static_body_2d_health_depleted"]
[connection signal="health_depleted" from="farm" to="." method="_on_farm_health_depleted"]
[connection signal="fox_health_depleted" from="playerFox" to="." method="_on_player_fox_fox_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer_big" to="." method="_on_timer_big_timeout"]
[connection signal="timeout" from="Timer_gunman" to="." method="_on_timer_gunman_timeout"]
